--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cookieconsent",
-  "version": "1.2.4",
+  "version": "1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -15,8 +15,8 @@
     "url": "git+https://github.com/brainsum/cookieconsent.git"
   },
   "keywords": [],
-  "author": "Brainsum",
-  "license": "ISC",
+  "author": "elkami12",
+  "license": "",
   "bugs": {
     "url": "https://github.com/brainsum/cookieconsent/issues"
   },
